@@ -37,8 +37,10 @@
 -- fixed binder[2] = { { when = { }, user = { } } } (extra { })
 -- fixed static flush points
 -- added stream_tcp.segs_split peg
+-- snort2lua patch
 -- changed from 2.10 to 3.0
 -- fixed RangeCheck
+-- doc tweaks, defined peg count
 
 126
 -- pulled latest from tom
